--- a/README
+++ b/README
@@ -1,3 +1,3 @@
-This is a low fidelity weight loss application. It (roughly) measures your BMI and calculates how long it would take you to reach a normal BMI at the rate of burning 500 calories a day. 
+This is a low fidelity application. It (roughly) measures your BMI and calculates how long it would take you to reach a normal BMI at the rate of burning 500 calories a day. 
 
 ***Planning on providing user with weight loss programs***
